[package]
name = "safecomms"
version = "0.1.0"
edition = "2024"
description = "Official Rust SDK for SafeComms API"
license = "MIT"
homepage = "https://safecomms.dev"
repository = "https://github.com/SafeComms/safecomms-rs/"
readme = "README.md"
keywords = ["content-moderation", "sdk"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = ["async"]
async = ["reqwest/default", "tokio"]
blocking = ["reqwest/blocking"]
